[package]
name = "pumpkin-util"
version.workspace = true
edition.workspace = true

[dependencies]
pumpkin-nbt = { path = "../pumpkin-nbt" }
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true

num-derive = "0.4"
num-traits = "0.2"

colored = "3.0"
md5 = "0.8"
quote = "1.0"
syn = "2.0"
proc-macro2 = "1.0"
enum_dispatch = "0.3.13"

uuid.workspace = true
tokio.workspace = true

tokio-task-scheduler = "1.0.0"
rand = "0.9.1"
os_info = "3.12.0"
num_cpus = "1.17.0"
reqwest = { version = "0.11", features = ["json"] }
flate2 = "1.1.2"
log = { version = "0.4.27", features = [] }